# inbox-fucked-up

./: README.md  pyproject.toml
src/: main.py
